# swagger/generated/restapi/operations/equipment/delete_equipment_responses.go
@@ -1,0 +1,116 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package equipment
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"git.epam.com/epm-lstr/epm-lstr-lc/be/swagger/generated/models"
+)
+
+// DeleteEquipmentCreatedCode is the HTTP code returned for type DeleteEquipmentCreated
+const DeleteEquipmentCreatedCode int = 201
+
+/*DeleteEquipmentCreated Equipment has been deleted
+
+swagger:response deleteEquipmentCreated
+*/
+type DeleteEquipmentCreated struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Equipment `json:"body,omitempty"`
+}
+
+// NewDeleteEquipmentCreated creates DeleteEquipmentCreated with default headers values
+func NewDeleteEquipmentCreated() *DeleteEquipmentCreated {
+
+	return &DeleteEquipmentCreated{}
+}
+
+// WithPayload adds the payload to the delete equipment created response
+func (o *DeleteEquipmentCreated) WithPayload(payload *models.Equipment) *DeleteEquipmentCreated {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the delete equipment created response
+func (o *DeleteEquipmentCreated) SetPayload(payload *models.Equipment) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *DeleteEquipmentCreated) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(201)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+/*DeleteEquipmentDefault Unexpected error.
+
+swagger:response deleteEquipmentDefault
+*/
+type DeleteEquipmentDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewDeleteEquipmentDefault creates DeleteEquipmentDefault with default headers values
+func NewDeleteEquipmentDefault(code int) *DeleteEquipmentDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &DeleteEquipmentDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the delete equipment default response
+func (o *DeleteEquipmentDefault) WithStatusCode(code int) *DeleteEquipmentDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the delete equipment default response
+func (o *DeleteEquipmentDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the delete equipment default response
+func (o *DeleteEquipmentDefault) WithPayload(payload *models.Error) *DeleteEquipmentDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the delete equipment default response
+func (o *DeleteEquipmentDefault) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *DeleteEquipmentDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
