# swagger/generated/restapi/operations/equipment/edit_equipment_responses.go
@@ -1,0 +1,116 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package equipment
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"git.epam.com/epm-lstr/epm-lstr-lc/be/swagger/generated/models"
+)
+
+// EditEquipmentCreatedCode is the HTTP code returned for type EditEquipmentCreated
+const EditEquipmentCreatedCode int = 201
+
+/*EditEquipmentCreated Equipment edited
+
+swagger:response editEquipmentCreated
+*/
+type EditEquipmentCreated struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Equipment `json:"body,omitempty"`
+}
+
+// NewEditEquipmentCreated creates EditEquipmentCreated with default headers values
+func NewEditEquipmentCreated() *EditEquipmentCreated {
+
+	return &EditEquipmentCreated{}
+}
+
+// WithPayload adds the payload to the edit equipment created response
+func (o *EditEquipmentCreated) WithPayload(payload *models.Equipment) *EditEquipmentCreated {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the edit equipment created response
+func (o *EditEquipmentCreated) SetPayload(payload *models.Equipment) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *EditEquipmentCreated) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(201)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+/*EditEquipmentDefault Unexpected error.
+
+swagger:response editEquipmentDefault
+*/
+type EditEquipmentDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewEditEquipmentDefault creates EditEquipmentDefault with default headers values
+func NewEditEquipmentDefault(code int) *EditEquipmentDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &EditEquipmentDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the edit equipment default response
+func (o *EditEquipmentDefault) WithStatusCode(code int) *EditEquipmentDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the edit equipment default response
+func (o *EditEquipmentDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the edit equipment default response
+func (o *EditEquipmentDefault) WithPayload(payload *models.Error) *EditEquipmentDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the edit equipment default response
+func (o *EditEquipmentDefault) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *EditEquipmentDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
