# swagger/generated/restapi/operations/equipment/get_equipment_responses.go
@@ -1,0 +1,116 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package equipment
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"git.epam.com/epm-lstr/epm-lstr-lc/be/swagger/generated/models"
+)
+
+// GetEquipmentCreatedCode is the HTTP code returned for type GetEquipmentCreated
+const GetEquipmentCreatedCode int = 201
+
+/*GetEquipmentCreated Equipment has been found
+
+swagger:response getEquipmentCreated
+*/
+type GetEquipmentCreated struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Equipment `json:"body,omitempty"`
+}
+
+// NewGetEquipmentCreated creates GetEquipmentCreated with default headers values
+func NewGetEquipmentCreated() *GetEquipmentCreated {
+
+	return &GetEquipmentCreated{}
+}
+
+// WithPayload adds the payload to the get equipment created response
+func (o *GetEquipmentCreated) WithPayload(payload *models.Equipment) *GetEquipmentCreated {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get equipment created response
+func (o *GetEquipmentCreated) SetPayload(payload *models.Equipment) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetEquipmentCreated) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(201)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+/*GetEquipmentDefault Unexpected error.
+
+swagger:response getEquipmentDefault
+*/
+type GetEquipmentDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewGetEquipmentDefault creates GetEquipmentDefault with default headers values
+func NewGetEquipmentDefault(code int) *GetEquipmentDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &GetEquipmentDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the get equipment default response
+func (o *GetEquipmentDefault) WithStatusCode(code int) *GetEquipmentDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the get equipment default response
+func (o *GetEquipmentDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the get equipment default response
+func (o *GetEquipmentDefault) WithPayload(payload *models.Error) *GetEquipmentDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get equipment default response
+func (o *GetEquipmentDefault) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetEquipmentDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
