# swagger/spec.yaml
@@ -298,7 +298,124 @@ paths:
         default:
           description: Unexpected error.
           schema:
-            $ref: "#/definitions/Error"            
+            $ref: "#/definitions/Error"
+  /equipment:
+    post:
+      summary: Register a new equipment
+      tags:
+        - Equipment
+      operationId: CreateNewEquipment
+      consumes:
+        - application/json
+      parameters:
+        - name: newEquipment
+          in: body
+          description: Create a new equipment
+          required: true
+          schema:
+            $ref: "#/definitions/Equipment"
+      responses:
+        201:
+          description: Equipment created
+          schema:
+            $ref: "#/definitions/EquipmentResponse"
+        default:
+          description: Unexpected error.
+          schema:
+            $ref: "#/definitions/Error"
+    get:
+      summary: Get all equipment
+      tags:
+        - Equipment
+      operationId: GetAllEquipment
+      responses:
+        201:
+          description: Success
+          schema:
+            $ref: "#/definitions/ListEquipment"
+        default:
+          description: Unexpected error.
+          schema:
+            $ref: "#/definitions/Error"
+
+  /equipment/{equipmentId}:
+    parameters:
+      - name: equipmentId
+        in: path
+        required: true
+        description: equipment id
+        type: string
+    get:
+      summary: Get equipment by id
+      tags:
+        - Equipment
+      operationId: GetEquipment
+      responses:
+        201:
+          description: Equipment has been found
+          schema:
+            $ref: "#/definitions/Equipment"
+        default:
+          description: Unexpected error.
+          schema:
+            $ref: "#/definitions/Error"
+    delete:
+      summary: Delete equipment by id
+      tags:
+        - Equipment
+      operationId: DeleteEquipment
+      responses:
+        201:
+          description: Equipment has been deleted
+          schema:
+            $ref: "#/definitions/Equipment"
+        default:
+          description: Unexpected error.
+          schema:
+            $ref: "#/definitions/Error"
+    put:
+      summary: Edit equipment by id
+      tags:
+        - Equipment
+      operationId: EditEquipment
+      parameters:
+        - name: EditEquipment
+          in: body
+          description: Edit an equipment
+          required: false
+          schema:
+            $ref: "#/definitions/Equipment"
+      responses:
+        201:
+          description: Equipment edited
+          schema:
+            $ref: "#/definitions/Equipment"
+        default:
+          description: Unexpected error.
+          schema:
+            $ref: "#/definitions/Error"
+  /findEquipment:
+    post:
+      summary: Equipment filtered list
+      tags:
+        - Equipment
+      operationId: FindEquipment
+      parameters:
+        - name: FindEquipment
+          in: body
+          description: Filtered list of an equipment
+          required: false
+          schema:
+            $ref: "#/definitions/Equipment"
+      responses:
+        201:
+          description: Equipment has been found
+          schema:
+            $ref: "#/definitions/ListEquipment"
+        default:
+          description: Unexpected error.
+          schema:
+            $ref: "#/definitions/Error"
 
 definitions:
   Error:
@@ -518,6 +635,92 @@ definitions:
   ListOfActiveAreas:
     type: array
     items:
-     $ref: "#/definitions/ActiveArea"  
+     $ref: "#/definitions/ActiveArea"
+  # Equipment
+  Equipment:
+    type: object
+    required:
+      - sku
+      - name
+      - kind
+      - status
+      - rate_hour
+      - rate_day
+      - location
+      - description
+      - photo
+    properties:
+      sku:
+        type: string
+        example: "ABC012345678"
+      name:
+        type: string
+        example: "Dog harness 3000"
+      kind:
+        type: integer
+        example: 5
+      status:
+        type: integer
+        example: 1
+      rate_hour:
+        type: integer
+      rate_day:
+        type: integer
+      location:
+        type: integer
+        example: 71
+      description:
+        type: string
+        example: "This is a dog harness.\nWARNING: do not put on cats!"
+      photo:
+        type: string
+        example: "https://..."
+  EquipmentResponse:
+    type: object
+    required:
+      - id
+      - sku
+      - name
+      - kind
+      - status
+      - rate_hour
+      - rate_day
+      - location
+      - description
+      - photo
+    properties:
+      id:
+        type: string
+        example: 2
+      sku:
+        type: string
+        example: "ABC012345678"
+      name:
+        type: string
+        example: "Dog harness 3000"
+      kind:
+        type: integer
+        example: 5
+      status:
+        type: integer
+        example: 1
+      rate_hour:
+        type: integer
+      rate_day:
+        type: integer
+      location:
+        type: integer
+        example: 71
+      description:
+        type: string
+        example: "This is a dog harness.\nWARNING: do not put on cats!"
+      photo:
+        type: string
+        example: "https://..."
+  ListEquipment:
+    type: array
+    items:
+      $ref: "#/definitions/EquipmentResponse"
+
 
 
